# SibGUTI

./: 12indexsort.cpp  13heap.cpp  14quicksort.cpp  15StackQueue.cpp  2BubbleSort.cpp  CMakeLists.txt  Makefile  README.md  fileIn.cpp  fill_array.hpp  geometry.cpp  lab (1).cpp  lab (10).cpp  lab (11).cpp  lab (12).cpp  lab (2).cpp  lab (3).cpp  lab (4).cpp  lab (5).cpp  lab (6).cpp  lab (7).cpp  lab (8).cpp  lab (9).cpp  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  main.cpp  mergesortLNS.cpp  myList.cpp  myQueue.cpp  myStack.cpp  myvector.cpp  quicksortLastnameSort.cpp
DPSaA/: .gitignore  New Microsoft Word Document.docx  README.md  aaa.cpp  file2.cpp
DPSaA/mainLabs/: 10binseatch.cpp  11something.cpp  3ShakerSort.cpp  5shell_sort.cpp  6heapsort.cpp  digitalsort2.cpp  hash_table_.cpp  hash_table_direct_linking.cpp  hash_table_open_addressing.cpp  hash_table_open_addressing2.cpp  heap2.cpp  myStack.cpp  tempCodeRunnerFile.cpp
DPSaA/sorts/: 10_quick_sort.cpp  (+9 more)
Discrete-mathematics/: .gitignore  lab1.cpp  lab2.cpp  lab5.cpp
lab (12)/: .gitignore  CMakeLists.txt  build.ninja  main.cpp  ninja.build  sorts.hpp  timer.hpp
mainLabs/: 12indexsort.cpp  16merge.cpp  17digitalSort.cpp  17digitalSortList.cpp  1selectSort.CPP  4sort-include.cpp  fill_array.hpp  hash_table_open_addressing - Copy.cpp  hash_table_open_addressing.cpp  tempCodeRunnerFile.cpp
output/: geoms.txt
sorts/: 11_lists.cpp  13_digital_sort.cpp  3_shaker_sort.cpp  6_bin_search.cpp
stringSortPrint/: BubbleSortLNS.cpp  ShellSortLNS.cpp  quicksortLastnameSort.cpp  tempCodeRunnerFile.cpp
(+6 files in other folders)
